# Game

./: .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md  README114514.md  tool.py  vcpkg.json
Game/: CMakeLists.txt
SFMLUI/: CMakeLists.txt
SFMLUI/include/: TestPage.hpp  main.hpp
SFMLUI/include/core/: Window.hpp
SFMLUI/include/core/message/: ActiveKeyBinding .hpp  EventBinding.hpp  Mouse.hpp
SFMLUI/include/core/pages/: ComplexPage.hpp  ControlPage.hpp  InteractivePage.hpp  Page.hpp
SFMLUI/include/core/window/: Window.hpp
SFMLUI/include/customizable/: TestPage.hpp  mainPage.hpp
SFMLUI/include/customizable/components/: AnimatedSprite.hpp  FrameAnimatedSprite.hpp  ImageItem.hpp  TextureItem.hpp  TimeAnimatedSprite.hpp
SFMLUI/include/customizable/controls/: Area.hpp  Interactive.hpp  button.hpp
SFMLUI/include/test/: TestPage.hpp  main.hpp
SFMLUI/src/: main.cpp
SFMLUI/src/core/: Window.cpp
SFMLUI/src/core/message/: Mouse.cpp
SFMLUI/src/core/pages/: Page.cpp
SFMLUI/src/core/window/: Window.cpp
SFMLUI/src/customizable/: mainpage.cpp
SFMLUI/src/customizable/components/: AnimatedSprite.cpp  TimeAnimatedSprite.cpp
SFMLUI/src/test/: main.cpp
_library/: description.md
assets/images/: block.png.tps
assets/media/: a.m4a
docs/html/: _active_key_binding_8cpp.html  _active_key_binding_8cpp__incl.map  _active_key_binding_8cpp__incl.md5  _active_key_binding_8cpp_source.html  _active_key_binding_8hpp.html  _active_key_binding_8hpp.js  _active_key_binding_8hpp__dep__incl.map  _active_key_binding_8hpp__dep__incl.md5  _active_key_binding_8hpp__incl.map  _active_key_binding_8hpp__incl.md5  _active_key_binding_8hpp_source.html  _area_8hpp.html  _area_8hpp__dep__incl.map  _area_8hpp__dep__incl.md5  _area_8hpp_source.html  _complex_page_8hpp.html  _complex_page_8hpp.js  _complex_page_8hpp__dep__incl.map  _complex_page_8hpp__dep__incl.md5  _complex_page_8hpp__incl.map  _complex_page_8hpp__incl.md5  _complex_page_8hpp_source.html  _control_page_8hpp.html  _control_page_8hpp__dep__incl.map  _control_page_8hpp__dep__incl.md5  _control_page_8hpp__incl.map  _control_page_8hpp__incl.md5  _control_page_8hpp_source.html  _event_binding_8cpp.html  _event_binding_8cpp__incl.map  _event_binding_8cpp__incl.md5  _event_binding_8cpp_source.html  _event_binding_8hpp.html  _event_binding_8hpp.js  _event_binding_8hpp__dep__incl.map  _event_binding_8hpp__dep__incl.md5  _event_binding_8hpp__incl.map  _event_binding_8hpp__incl.md5  _event_binding_8hpp_source.html  _frame_animated_sprite_8hpp.html  (+518 more)
docs/latex/: _active_key_binding_8cpp.tex  _active_key_binding_8cpp__incl.eps  _active_key_binding_8cpp__incl.md5  _active_key_binding_8cpp_source.tex  _active_key_binding_8hpp.tex  _active_key_binding_8hpp__dep__incl.eps  _active_key_binding_8hpp__dep__incl.md5  _active_key_binding_8hpp__incl.eps  _active_key_binding_8hpp__incl.md5  _active_key_binding_8hpp_source.tex  _area_8hpp.tex  _area_8hpp__dep__incl.eps  _area_8hpp__dep__incl.md5  _area_8hpp_source.tex  _complex_page_8hpp.tex  _complex_page_8hpp__dep__incl.eps  _complex_page_8hpp__dep__incl.md5  _complex_page_8hpp__incl.eps  _complex_page_8hpp__incl.md5  _complex_page_8hpp_source.tex  _control_page_8hpp.tex  _control_page_8hpp__dep__incl.eps  _control_page_8hpp__dep__incl.md5  _control_page_8hpp__incl.eps  _control_page_8hpp__incl.md5  _control_page_8hpp_source.tex  _event_binding_8cpp.tex  _event_binding_8cpp__incl.eps  _event_binding_8cpp__incl.md5  _event_binding_8cpp_source.tex  _event_binding_8hpp.tex  _event_binding_8hpp__dep__incl.eps  _event_binding_8hpp__dep__incl.md5  _event_binding_8hpp__incl.eps  _event_binding_8hpp__incl.md5  _event_binding_8hpp_source.tex  _frame_animated_sprite_8hpp.tex  _frame_animated_sprite_8hpp__dep__incl.eps  _frame_animated_sprite_8hpp__dep__incl.md5  _frame_animated_sprite_8hpp__incl.eps  (+375 more)
elemental/: description.md
elemental/include/: biology.hpp  elemental.hpp  player.hpp  world_elemental.hpp
elemental/src/: biology.cpp  elemental.cpp
game/include/: MainMenuPage.hpp
game/src/: main.cpp
include/core/: tool.hpp
include/game/: Item_Inventory.hpp  boss.hpp  bullet.hpp  item.hpp  player.hpp  word.hpp
sfml_ui/: Doxyfile  description.md
(+938 files in other folders)
